edit toml build

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
-  command = "ng build --configuration production"
+  command = "ng build --prod"
   publish = "dist/angular-tour-of-heroes"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
