--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[[build]]
-  command = "ng build --prod"
+[build]
+  command = "npm run build"
   publish = "dist/angular-tour-of-heroes"
 
 [[redirects]]
