--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
-[build]
-  command = "npm run build"
+[[build]]
+  command = "ng build --prod"
   publish = "dist/angular-tour-of-heroes"
 
 [[redirects]]
